--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   text-align: left;
 }
 
-.tempinput {
+.tempinputarea {
   display: flex;
   gap: 10px;
 }
@@ -95,7 +95,6 @@ body {
   font-size: 15px;
   padding: 10px;
   margin: 5px 0px;
-  width: 80%;
 }
 
 .unitoptions {
@@ -117,7 +116,6 @@ body {
   /* opacity: 0; */
 }
 
-/* CSS */
 .submitbtn {
   background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
   border-radius: 8px;
@@ -152,6 +150,39 @@ body {
 }
 .resultcontainer {
   text-align: left;
+}
+
+#resultunit {
+  width: 20%;
+}
+
+.resetarea {
+  margin: 20px;
+}
+
+.resetbtn {
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, 0.2) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.15) 0 1px 2px, rgba(44, 187, 99, 0.15) 0 2px 4px, rgba(44, 187, 99, 0.15) 0 4px 8px, rgba(44, 187, 99, 0.15) 0 8px 16px, rgba(44, 187, 99, 0.15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.resetbtn:hover {
+  box-shadow: rgba(44, 187, 99, 0.35) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.25) 0 1px 2px, rgba(44, 187, 99, 0.25) 0 2px 4px, rgba(44, 187, 99, 0.25) 0 4px 8px, rgba(44, 187, 99, 0.25) 0 8px 16px, rgba(44, 187, 99, 0.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
 }
 
 /* .semnos{
