--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ body {
      text-align: left;
 }
 
-.tempinput {
+.tempinputarea {
      display: flex;
      gap: 10px;
 }
@@ -116,7 +116,7 @@ body {
      font-size: 15px;
      padding: 10px;
      margin: 5px 0px;
-     width: 80%;
+     // width: 80%;
 }
 
 .unitoptions {
@@ -140,10 +140,7 @@ body {
      /* opacity: 0; */
 }
 
-// <!-- HTML !-->
-// <button class="button-36" role="button">Button 36</button>
 
-/* CSS */
 .submitbtn {
      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
      border-radius: 8px;
@@ -172,6 +169,7 @@ body {
 
 .submitbtn:hover {}
 
+
 @media (min-width: 768px) {
      .submitbtn {
           padding: 0 2.6rem;
@@ -179,12 +177,51 @@ body {
 }
 
 
-
 .resultcontainer {
      text-align: left;
+     // display: flex;
+     // width: 80%;
+}
+
+#resultvalue{
+     // flex-basis: 60%;
+}
+
+#resultunit{
+     // flex-basis: 40%;
+     width: 20%;
+}
+
+.resetarea{
+     margin: 20px;
 }
 
 
+.resetbtn {
+     background-color: #c2fbd7;
+     border-radius: 100px;
+     box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
+     color: green;
+     cursor: pointer;
+     display: inline-block;
+     font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+     padding: 7px 20px;
+     text-align: center;
+     text-decoration: none;
+     transition: all 250ms;
+     border: 0;
+     font-size: 16px;
+     user-select: none;
+     -webkit-user-select: none;
+     touch-action: manipulation;
+
+     &:hover {
+          box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
+          transform: scale(1.05) rotate(-1deg);
+     }
+}
+
+.resetbtn:hover {}
 
 
 
