--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 /* @import url('https://fonts.googleapis.com/css2?family=Laila&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700&display=swap");
 body {
   /* background: teal; */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/milad-fakurian-E8Ufcyxz514-unsplash.jpg");
@@ -41,41 +47,46 @@ body {
   border: 3px solid #520D80;
   font-family: "Laila", sans-serif;
   font-weight: bolder;
-  font-size: 50px;
+  font-size: 36px;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   border-bottom: 8px solid #520D80;
 }
 
 .container {
+  font-family: "Exo", sans-serif;
   background: lavender;
   background: rgba(230, 230, 250, 0.8);
   margin: 10px;
-  padding: 40px;
+  padding: 22px;
   border: 3px solid darkgoldenrod;
   border-radius: 20px;
 }
 
 .temptitle {
-  margin: 5px;
-  text-align: left;
+  margin: 10px 5px;
 }
 
-.tempinputarea {
-  display: flex;
-  gap: 10px;
+#toptitle {
+  margin: 5px 5px 10px 5px;
 }
 
 .tempdegree {
   flex-basis: 50%;
-  text-align: left;
+}
+
+#tempinput {
+  text-align: center;
+  width: 20%;
 }
 
 .tempunit {
-  flex-basis: 50%;
+  text-align: center;
 }
 
-#unitbox {
+.unitbox {
+  font-family: "Tillana", cursive;
+  font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -88,11 +99,12 @@ body {
 }
 
 .tempinputbox {
-  background: seashell;
   background: inherit;
+  font-family: "Dosis", sans-serif;
+  font-weight: 500;
+  font-size: 17px;
   border: none;
   border-bottom: 1px solid black;
-  font-size: 15px;
   padding: 10px;
   margin: 5px 0px;
 }
@@ -103,7 +115,7 @@ body {
 }
 
 .calltoaction {
-  margin: 5vh 0px;
+  margin: 3.3vh 0px;
 }
 
 #submitbtn {
@@ -127,7 +139,7 @@ body {
   font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   font-weight: 500;
-  height: 4rem;
+  height: 3rem;
   padding: 0 1.6rem;
   text-align: center;
   text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
@@ -149,15 +161,49 @@ body {
   }
 }
 .resultcontainer {
-  text-align: left;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+#result {
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 20%;
+}
+#result:hover {
+  cursor: not-allowed;
 }
 
 #resultunit {
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 5px;
   width: 20%;
+}
+#resultunit:hover {
+  cursor: not-allowed;
+}
+
+#fullresult {
+  font-family: "Kanit", sans-serif;
+  font-family: "Cairo", sans-serif;
+  font-family: "Philosopher", sans-serif;
+  font-size: 20px;
+  margin-top: 10px;
+  border: none;
+  text-align: center;
+  cursor: auto;
+  opacity: 0;
+  transition: all 0.5s;
+}
+#fullresult:focus {
+  outline: none;
 }
 
 .resetarea {
-  margin: 20px;
+  margin: 10px;
 }
 
 .resetbtn {
