--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,17 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Laila&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700&display=swap');
 
 body {
      /* background: teal; */
@@ -50,7 +60,7 @@ body {
           border: 3px solid #520D80;
           font-family: 'Laila', sans-serif;
           font-weight: bolder;
-          font-size: 50px;
+          font-size: 36px;
 
           -webkit-text-stroke-width: 1px;
           -webkit-text-stroke-color: black;
@@ -62,38 +72,56 @@ body {
 }
 
 .container {
+     font-family: 'Exo', sans-serif;
      background: lavender;
      background: rgb(230, 230, 250, 0.8);
      margin: 10px;
      // padding: 40px 10px 20px 10px;
-     padding: 40px;
+     padding: 22px;
      // width: 40%;
      border: 3px solid darkgoldenrod;
      border-radius: 20px;
 }
 
 .temptitle {
-     margin: 5px;
-     text-align: left;
+     margin: 10px 5px;
+     // text-align: left;
+}
+
+#toptitle{
+     margin: 5px 5px 10px 5px;
 }
 
 .tempinputarea {
-     display: flex;
-     gap: 10px;
+     // display: flex;
+     // gap: 10px;
 }
 
 .tempdegree {
      flex-basis: 50%;
      // border: 1px solid red;
-     text-align: left;
+     // text-align: left;
 }
 
-.tempunit {
-     flex-basis: 50%;
+#tempinput{
+     text-align: center;
+     width: 20%;
+}
+
+.tempunit{
+     text-align: center;
+     // display: flex;
+     // justify-content: space-evenly;
+}
+
+.tempunitbox {
+     // flex-basis: 50%;
      // border: 1px solid green;
 }
 
-#unitbox {
+.unitbox {
+     font-family: 'Tillana', cursive;
+     font-weight: 500;
      display: flex;
      align-items: center;
      justify-content: space-evenly;
@@ -107,13 +135,15 @@ body {
 }
 
 .tempinputbox {
-     background: seashell;
      background: inherit;
+     // background: seashell;
+     font-family: 'Dosis', sans-serif;
+     font-weight: 500;
+     font-size: 17px;
      // border: 3px ridge silver;
      border: none;
      border-bottom: 1px solid black;
      // border-radius: 5px;
-     font-size: 15px;
      padding: 10px;
      margin: 5px 0px;
      // width: 80%;
@@ -126,7 +156,7 @@ body {
 
 
 .calltoaction {
-     margin: 5vh 0px;
+     margin: 3.3vh 0px;
 }
 
 #submitbtn {
@@ -152,7 +182,7 @@ body {
      font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
      font-size: 16px;
      font-weight: 500;
-     height: 4rem;
+     height: 3rem;
      padding: 0 1.6rem;
      text-align: center;
      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
@@ -178,22 +208,60 @@ body {
 
 
 .resultcontainer {
-     text-align: left;
-     // display: flex;
+     // text-align: left;
+     // padding: 0px 10vw;
      // width: 80%;
+     display: flex;
+     justify-content: center;
+     gap: 10px;
+
 }
 
-#resultvalue{
-     // flex-basis: 60%;
+#result{
+     text-align: center;
+     border: 1px solid black;
+     border-radius: 5px;
+     // flex-basis: 30%;
+     width: 20%;
+
+     &:hover{
+          cursor: not-allowed;
+     }
 }
 
 #resultunit{
-     // flex-basis: 40%;
+     text-align: center;
+     border: 1px solid black;
+     border-radius: 5px;
+     // flex-basis: 30%;
      width: 20%;
+
+     &:hover{
+          cursor: not-allowed;
+     }
+}
+
+#fullresult{
+     font-family: 'Kanit', sans-serif;
+     font-family: 'Cairo', sans-serif;
+     
+     font-family: 'Philosopher', sans-serif;
+     font-size: 20px;
+     margin-top: 10px;
+     border: none;
+     text-align: center;
+     cursor: auto;
+     opacity: 0;
+     transition: all 0.5s;
+     // display: block;
+
+     &:focus{
+          outline: none;
+     }
 }
 
 .resetarea{
-     margin: 20px;
+     margin: 10px;
 }
 
 
