--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Julee&display=swap");
 body {
   /* background: teal; */
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/milad-fakurian-E8Ufcyxz514-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/pawel-czerwinski-Nmeu6odqoNM-unsplash.jpg");
   background-size: cover;
   margin: 0;
   padding: 0;
@@ -57,6 +58,7 @@ body {
   font-family: "Exo", sans-serif;
   background: lavender;
   background: rgba(230, 230, 250, 0.8);
+  background: linear-gradient(to top, rgba(250, 208, 196, 0.77) 0%, rgba(255, 209, 255, 0.77) 100%);
   margin: 10px;
   padding: 22px;
   border: 3px solid darkgoldenrod;
@@ -190,12 +192,14 @@ body {
   font-family: "Kanit", sans-serif;
   font-family: "Cairo", sans-serif;
   font-family: "Philosopher", sans-serif;
+  font-family: "Julee", cursive;
   font-size: 20px;
   margin-top: 10px;
   border: none;
   text-align: center;
   cursor: auto;
   opacity: 0;
+  width: -webkit-fill-available;
   transition: all 0.5s;
 }
 #fullresult:focus {
