--- a/style.css
+++ b/style.css
@@ -235,6 +235,14 @@ body {
   transform: scale(1.05) rotate(-1deg);
 }
 
+@media screen and (max-width: 500px) {
+  .heading h1 {
+    font-size: 28px;
+  }
+  .container {
+    zoom: 88%;
+  }
+}
 /* .semnos{
      border: 3px solid purple;
 }
