--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Laila&display=swap'); */
+
 @import url('https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -99,6 +99,7 @@ body {
 
 #toptitle{
      margin: 5px 5px 10px 5px;
+     font-weight: 600;
 }
 
 .tempinputarea {
@@ -217,12 +218,12 @@ body {
 
 
 .resultcontainer {
-     // text-align: left;
-     // padding: 0px 10vw;
-     // width: 80%;
      display: flex;
      justify-content: center;
      gap: 10px;
+     // text-align: left;
+     // padding: 0px 10vw;
+     // width: 80%;
 
 }
 
@@ -303,6 +304,9 @@ body {
 .resetbtn:hover {}
 
 
+
+// ----------Media Queries----------
+
 @media screen and (max-width: 500px) {
 
      .heading{
@@ -315,122 +319,3 @@ body {
           zoom: 88%;
      }
 }
-
-
-
-
-
-
-
-
-
-// .semsplit {
-//      width: 80%;
-// }
-
-// .resultsplit {
-//      width: 100%;
-// }
-
-
-// .resultcontainer {
-//      background-color: rgb(255, 192, 203, 0.8);
-//      display: none;
-//      text-align: center;
-//      margin: 10px;
-//      padding: 50px;
-//      width: 66vh;
-//      /* height: 77vh; */
-//      border: 3px solid darkgoldenrod;
-//      border-radius: 20px;
-// }
-
-// .extraresult {
-//      /* border: 3px solid green;
-//      border-radius: 10px; */
-//      padding: 20px;
-// }
-
-// .extraresult::after {
-//      /* content: "<hr class="resultsplit">"; */
-//      /* content: " . ";
-//      border: 3px solid blue; */
-// }
-
-// #submitarea {
-//      padding: 10px;
-//      /* margin: 10px; */
-// }
-
-
-
-// #submit:hover {
-//      background: orchid;
-//      cursor: pointer;
-// }
-
-// #reset {
-//      background: tan;
-//      display: none;
-//      margin: 10px;
-//      padding: 6px;
-//      font-family: 'Ubuntu', sans-serif;
-//      font-size: 12px;
-//      font-weight: bold;
-//      border-radius: 10px;
-//      border: 1px groove black;
-
-// }
-
-// #reset:hover {
-//      /* background-color: sienna; */
-//      background-color: bisque;
-//      cursor: pointer;
-// }
-
-// #resetarea {
-//      align-items: center;
-// }
-
-
-
-// @media screen and (max-width: 800px) {
-//      .container {
-//           width: 80%;
-//      }
-
-//      input {
-//           width: 20%;
-//      }
-// }
-
-
-
-
-
-
-
-
-/* .semnos{
-     border: 3px solid purple;
-}
-
-.subcontainer{
-     border: 6px solid dimgray;
-}
-
-#semscount{
-     border: 4px solid steelblue;
-}
-
-#semscontainer{
-     border: 5px solid hotpink;
-}
-
-#submitarea{
-     border: 4px solid green;
-}
-
-#reset{
-     border: 3px solid coral ;
-} */
