--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Julee&display=swap");
+
 body {
   /* background: teal; */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/pawel-czerwinski-Nmeu6odqoNM-unsplash.jpg");
@@ -147,11 +148,12 @@ body {
   text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
   transition: all 0.5s;
   -moz-user-select: none;
-   -ms-user-select: none;
-       user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
 .submitbtn:hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
   transition-duration: 0.1s;
@@ -162,6 +164,7 @@ body {
     padding: 0 2.6rem;
   }
 }
+
 .resultcontainer {
   display: flex;
   justify-content: center;
@@ -174,6 +177,7 @@ body {
   border-radius: 5px;
   width: 20%;
 }
+
 #result:hover {
   cursor: not-allowed;
 }
@@ -184,6 +188,7 @@ body {
   border-radius: 5px;
   width: 20%;
 }
+
 #resultunit:hover {
   cursor: not-allowed;
 }
@@ -202,6 +207,7 @@ body {
   width: -webkit-fill-available;
   transition: all 0.5s;
 }
+
 #fullresult:focus {
   outline: none;
 }
@@ -225,11 +231,12 @@ body {
   border: 0;
   font-size: 16px;
   -moz-user-select: none;
-   -ms-user-select: none;
-       user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
 .resetbtn:hover {
   box-shadow: rgba(44, 187, 99, 0.35) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.25) 0 1px 2px, rgba(44, 187, 99, 0.25) 0 2px 4px, rgba(44, 187, 99, 0.25) 0 4px 8px, rgba(44, 187, 99, 0.25) 0 8px 16px, rgba(44, 187, 99, 0.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
@@ -239,7 +246,10 @@ body {
   .heading h1 {
     font-size: 28px;
   }
+
   .container {
     zoom: 88%;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
